# tacs

./: .coveragerc  Makefile  Makefile.in.info  README.md  genindex.html  objects.inv  print_libraries.py  pyproject.toml  searchindex.js  setup.py
.github/workflows/: build_and_deploy_wheel.yml  deploy_conda_package.yml  unit_tests.yml
_modules/tacs/: pytacs.html
conda/: meta.yaml
examples/crm/: analysis.py
pytacs/: pytacs_module.html
src/: Makefile
src/bpmat/: Makefile  TACSBlockCyclicMat.cpp
src/constitutive/: Makefile
src/elements/: Makefile
src/elements/basis/: Makefile  TACSElementBasis.cpp
src/elements/dynamics/: Makefile
src/elements/shell/: Makefile
src/functions/: Makefile
src/io/: Makefile
tacs/: TACS.pxd  TACS.pyx  constitutive.pxd  constitutive.pyx  elements.pxd  elements.pyx  functions.pxd  functions.pyx
tacs/mphys/: mphys_tacs.py
tacs/problems/: buckling.py  static.py  transient.py
tests/element_tests/: test_element_2d.py  test_element_3d.py
tests/element_tests/shell_tests/: test_shell_element.py
tests/integration_tests/: openmdao_analysis_base_test.py  pytacs_analysis_base_test.py  static_analysis_base_test.py  test_caps_shape_derivatives.py  test_caps_thick_derivatives.py  test_mphys_struct_plate.py  test_point_mass_element.py  test_shell_comp_unbalanced.py  test_shell_plate_rbe2_pytacs.py  test_trans_beam.py
