#pyproject.toml
[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools>=45.0', 'cython>=0.29', 'oldest-supported-numpy',
            "mpi4py==3.0.0; python_version<='3.8'",
            "mpi4py==3.1.0; python_version=='3.9'",
            "mpi4py==3.1.3; python_version=='3.10'"]